--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,14 @@ dependencies {
     compile group: 'com.sparkjava', name: 'spark-template-freemarker', version: '2.0.0'
     compile("org.freemarker:freemarker:${freemarkerVersion}")
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
-    //compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 
     //Librerias de Hibernate
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
 
     compile 'com.sparkjava:spark-debug-tools:0.5'
+
+    compile 'com.j2html:j2html:1.0.0'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
