--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     compile 'com.j2html:j2html:1.0.0'
 
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
